assert-struct/tests/snapshots/tuples__enum_tuple_four_errors.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/enum_four_errors.rs:25:36
   |
25 |             current: Message::Quad(1, 2, 3, 4),  // All four fields wrong
   |                                    ^  ^  ^  ^ got 40
   |                                    |  |  |
   |                                    |  |  got 30
   |                                    |  got 20
   |                                    got 10
